Melhorias para exibição de colunas
Foi deixado de usar o Plugin "Columns" e passei a usar CSS Snippets, mais especificamente o Modular CSS Layout disponível no link a seguir: https://github.com/efemkay/obsidian-modular-css-layout.

O Plugin Callout Manager também foi adicionado e as páginas refatoradas para utilizar desses CSS Snippets.

--- a/.obsidian/appearance.json
+++ b/.obsidian/appearance.json
@@ -1,4 +1,9 @@
 {
   "theme": "obsidian",
-  "baseFontSize": 16
+  "baseFontSize": 16,
+  "enabledCssSnippets": [
+    "MCL Multi Column",
+    "MCL Gallery Cards",
+    "MCL Wide Views"
+  ]
 }
